@@ -476,6 +476,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #1488943: difflib.Differ() doesn't always add hints for tab characters
+
 - Issue #6123: tarfile now opens empty archives correctly and consistently
   raises ReadError on empty files.
 
